[package]
name = "borrow-or-share"
version = "0.0.1"
authors = ["Scallop Ye <yescallop@gmail.com>"]
edition = "2021"
description = "Traits for either borrowing data or sharing references."
documentation = "https://docs.rs/borrow-or-share"
repository = "https://github.com/yescallop/borrow-or-share"
license = "CC0-1.0"
keywords = ["borrow", "share"]
categories = ["rust-patterns"]

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
